// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Form/Slider Basic smoke-test 1`] = `
<div class="cmpui_slider__root">
  <div class="cmpui_slider__track">
    <div class="cmpui_slider__range"
         style="width: 50%; height: 100%;"
    >
    </div>
  </div>
  <div tabindex="0"
       class="cmpui_slider__nob"
       aria-label="Volume"
       style="left: calc(50% - 8px);"
  >
  </div>
</div>
`;

exports[`Components/Form/Slider Disabled smoke-test 1`] = `
<div class="cmpui_slider__root"
     aria-disabled="true"
>
  <div class="cmpui_slider__track">
    <div class="cmpui_slider__range"
         style="width: 50%; height: 100%;"
    >
    </div>
  </div>
  <div tabindex="0"
       class="cmpui_slider__nob"
       aria-label="Volume"
       style="left: calc(50% - 8px);"
  >
  </div>
</div>
`;

exports[`Components/Form/Slider MinMax smoke-test 1`] = `
<div class="cmpui_slider__root">
  <div class="cmpui_slider__track">
    <div class="cmpui_slider__range"
         style="width: 66.6667%; height: 100%;"
    >
    </div>
  </div>
  <div tabindex="0"
       class="cmpui_slider__nob"
       aria-label="Volume"
       style="left: calc(66.6667% - 8px);"
  >
  </div>
</div>
`;

exports[`Components/Form/Slider RtoL smoke-test 1`] = `
<div class="cmpui_slider__root"
     dir="rtl"
>
  <div class="cmpui_slider__track">
    <div class="cmpui_slider__range"
         style="width: 50%; height: 100%;"
    >
    </div>
  </div>
  <div tabindex="0"
       class="cmpui_slider__nob"
       aria-label="Volume"
       style="left: calc(50% - 8px);"
  >
  </div>
</div>
`;

exports[`Components/Form/Slider Vertical smoke-test 1`] = `
<div class="cmpui_slider__root"
     data-orientation="vertical"
>
  <div class="cmpui_slider__track"
       data-orientation="vertical"
  >
    <div data-orientation="vertical"
         class="cmpui_slider__range"
         style="width: 100%; height: 50%;"
    >
    </div>
  </div>
  <div tabindex="0"
       data-orientation="vertical"
       class="cmpui_slider__nob"
       aria-label="Volume"
       style="top: calc(50% - 8px);"
  >
  </div>
</div>
`;

exports[`Components/Form/Slider VerticalR2L smoke-test 1`] = `
<div class="cmpui_slider__root"
     data-orientation="vertical"
     dir="rtl"
>
  <div class="cmpui_slider__track"
       data-orientation="vertical"
  >
    <div data-orientation="vertical"
         class="cmpui_slider__range"
         style="width: 100%; height: 50%; top: 50%;"
    >
    </div>
  </div>
  <div tabindex="0"
       data-orientation="vertical"
       class="cmpui_slider__nob"
       aria-label="Volume"
       style="top: calc(50% - 8px);"
  >
  </div>
</div>
`;
